# OhPossum

./: .gitignore  .gitmodules  README.md
docs/: README.md  style.md
hardware/: Printed Hole Size Dictionary.xlsx  README.md
hardware/models/Motor Test Jig/: Ebay Encoder 1.rev1.SLDPRT  Ebay Encoder 1.rev1.STEP  Encoder Mounting Plate.SLDPRT  Encoder Mounting Plate.rev2.SLDPRT  Encoder magnet cap.rev1.SLDPRT  Encoder test assem.rev1.SLDASM  Encoder test assem.rev2.SLDASM  Motor Mounting Plate.rev1.SLDPRT  Motor Testing Assembly.rev1.SLDALASM  Motor Testing Assembly.rev1.SLDASM  Motor Testing Base.rev1.SLDPRT  Motor Testing Flag and Magnet Cap COMBO.rev3.SLDPRT  Motor Testing Flag.rev1.SLDPRT  Motor Testing Flag.rev2.SLDPRT  ~$Motor Testing Flag and Magnet Cap COMBO.rev3.SLDPRT
hardware/models/Motor Test Jig/Printing Files/: Encoder Mounting Plate.rev1.STL  Encoder Mounting Plate.rev2.STL  Encoder magnet cap.rev1.STL  Motor Mounting Plate.rev1.STL  Motor Testing Base.rev1.STL  Motor Testing Flag.rev2.STL
hardware/models/Prototype/: Assembly.rev1.SLDASM  Base.rev1.SLDPRT  Pan Motor Mount.rev1.SLDPRT  Stand.rev1.SLDPRT  hexalobular socket cheese head_iso.SLDPRT
hardware/models/Prototype/v1/: AS5600 v1.step.SLDPRT  Aluminium Shaft.SLDPRT  Assembly.rev1.SLDASM  Base Assembly.rev1.SLDASM  Base Lid.rev1.SLDPRT  Base gear.rev1.SLDPRT  Base.rev2.SLDPRT  Cradle Base.rev1.SLDPRT  Small Motor.rev1.SLDPRT  Stand.rev1.SLDPRT  Upright.rev1.SLDPRT
hardware/models/Prototype/v2/: Base gear.rev1.SLDPRT  Base.rev1.SLDPRT  Small Motor.rev1.STEP
hardware/models/Raspi Desktop Jig/: 04020VA.sldprt  Mesh.SLDPRT  Raspberry Pi Desk Jig Model.SLDPRT  Roof.SLDPRT
hardware/models/Single Axis Test Jig/: 6806ZZ v1.f3d  6806ZZ v2.f3d  6806ZZ v3.f3d  AS5600 v1.f3d  BottomPlate v10.f3d  BottomPlate v12.f3d  BottomPlate v3.f3d  BottomPlate v4.f3d  BottomPlate v5.f3d  BottomPlate v6.f3d  BottomPlate v8.f3d  BottomPlate v9.f3d  Drive gear v1.f3d  Drive gear v2.f3d  Drive gear v3.f3d  Drive gear v4.f3d  Drive gear v5.f3d  Drive gear v6.f3d  Drive gear v7.f3d  Encoder magnet v1.f3d  Encoder v1.f3d  Initial axle design v1.f3d  Initial axle design v10.f3d  Initial axle design v2.f3d  Initial axle design v3.f3d  Initial axle design v5.f3d  Initial axle design v6.f3d  Initial axle design v7.f3d  Initial axle design v9.f3d  LMP-30A v1.f3d  M2 x 0.4mm Thread 10mm LONG SOCKET HEAD CAP SCREW v1.f3d  M2.5 Hex Screws (Various Lengths) v3.f3d  M2.5x14mm Cup Head Bolt v2.f3z  M2.5x2mm Hex Nut v2.f3d  M2.5x2mm Standoff v1.f3d  M3 Cup Head  Bolts（M3X6） v1.f3d  M3 x 0.5mm Thread 18mm LONG SOCKET HEAD CAP SCREW v1.f3d  M3x1.8mm Hex Nut v1.f3d  Omron SS-5GL2 v2.f3d  Raspberry Pi Debug Probe v0.f3d  (+34 more)
hardware/models/Single Axis Test Jig/Archive/: AS5600_ebay v1.f3d
hardware/models/Single Axis Test Jig/Print Files/: 3D Printable Thread Test v2.stl  3D Printable Thread Test v3.stl  3D Printable Thread Test v5.stl  BottomPlate v13.stl  Drive gear v6.stl  Drive gear v7.stl  Initial axle design v10.stl  Top bearing retainer v5.stl  TopPlate v10.stl  TopPlate v11.stl  TopPlate v8.stl  TopPlate v9.stl
hardware/models/Single Axis Test Jig/eDrawings Model/SingleAxisTestJig v39/: 6806ZZ Ball.ipt  6806ZZ Inner ring.ipt  6806ZZ Outer ring.ipt  6806ZZ Shield.ipt  6806ZZ v3.iam  6806ZZ v3_1.iam  AS5600 v2.ipt  Arm.ipt  Axle.ipt  Body.ipt  BottomPlate v13.iam  Drive gear v7.iam  Encoder magnet v1.ipt  Initial axle design v10.ipt  LMP-30A v1.ipt  M2 x 0.4mm Thread 10mm LONG SOCKET HEAD CAP SCREW v1.ipt  M2.5x14mm Cup Head Bolt v2.ipt  M2.5x2mm Hex Nut v2.ipt  M2.5x2mm Standoff v1.ipt  M3 Cup Head  Bolts（M3X6） v1.ipt  M3 x 0.5mm Thread 18mm LONG SOCKET HEAD CAP SCREW v1.ipt  M3x1.8mm Hex Nut v1.ipt  Omron SS-5GL2 v2.iam  Omron SS-5GL2 v2_1.iam  Part4.ipt  SingleAxisTestJig.iam  Small Motor v4.ipt  Spur Gear (18 teeth).ipt  (+4 more)
hardware/models/Single Axis Test Jig/v&v/: Female Thread Test v1.f3d  Male Thread Test v2.f3d
software/: README.md  known_bugs.txt
software/control_system/: CMakeLists.txt
software/control_system/include/: as5600.h  gimbal_configuration.h  pid.h  rotary_utils.h
software/control_system/src/: command.c  gimbal.c  gimbal_configuration.c  pid.c  rotary_utils.c
software/gimbal-control-board/: meson.build
software/gimbal-control-board/include/: example_include.hpp
software/gimbal-control-board/src/: main.cpp
software/pico/: CMakeLists.txt  PID_testing.txt
software/pico/include/: AS5600.h  PID.h  as5600.h  command.h  command_input.h  gimbal_configuration.h  pid.h  serial_input.h
software/pico/src/: AS5600.c  PID.c  as5600.c  command.c  command_input.c  encoder.c  gimbal.c  gimbal_configuration.c  pid.c  serial_input.c  timer.c
software/src/: CMakeLists.txt  PID.h  beacon_discovery.py  encoder.c  main.c  processor.py  processor_discovery.py  timer.c
